[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hvsr-lite"
version = "0.1.0"
authors = [
    {name = "Shihao Yuan", email = "syuan@mines.edu"},
]
description = "Fast, minimal HVSR analysis - pure-core package with advanced smoothing"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.3.0",
    "obspy>=1.3.0",
    "tqdm>=4.60.0",
    "numba>=0.56.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "jupyter",
]

[project.urls]
Homepage = "https://github.com/Shihao-Yuan/hvsr-lite"
Repository = "https://github.com/Shihao-Yuan/hvsr-lite"
Issues = "https://github.com/Shihao-Yuan/hvsr-lite/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["hvsr_lite*"]

[tool.black]
line-length = 88
target-version = ['py310']
